etapa5/etapa3/parser.output
Terminais sem uso na gramática

    "type"
    "error"


Gramática

    0 $accept: program $end

    1 program: list ';'

    2 list: element
    3     | element ',' list

    4 element: function_definition
    5        | variable_declaration

    6 function_definition: header body

    7 header: "identifier" "->" var_type optional_parameter_list ":="

    8 optional_parameter_list: ε
    9                        | "with" parameter_list
   10                        | parameter_list

   11 parameter_list: parameter
   12               | parameter_list ',' parameter

   13 parameter: "identifier" ":=" var_type

   14 body: command_block

   15 command_block: '[' command_sequence ']'
   16              | '[' ']'

   17 command_sequence: simple_command
   18                 | simple_command command_sequence

   19 simple_command: variable_declaration_with_instantiation
   20               | function_call
   21               | attribution_command
   22               | return_command
   23               | flow_control_command
   24               | command_block

   25 variable_declaration: "variable" "identifier" ":=" var_type

   26 variable_declaration_with_instantiation: "variable" "identifier" ":=" var_type optional_instantiation

   27 var_type: "decimal"
   28         | "integer"

   29 optional_instantiation: "with" literal
   30                       | ε

   31 literal: "integer literal"
   32        | "decimal literal"

   33 attribution_command: "identifier" ":=" expression

   34 function_call: "identifier" '(' args ')'

   35 args: expression
   36     | expression ',' args
   37     | ε

   38 return_command: "return" expression ":=" var_type

   39 flow_control_command: conditional_struct
   40                     | iterative_struct

   41 conditional_struct: "if" '(' expression ')' command_block else_block

   42 else_block: "else" command_block
   43           | ε

   44 iterative_struct: "while" '(' expression ')' command_block

   45 expression: logical_or_expression

   46 logical_or_expression: logical_and_expression
   47                      | logical_or_expression '|' logical_and_expression

   48 logical_and_expression: equality_expression
   49                       | logical_and_expression '&' equality_expression

   50 equality_expression: relational_expression
   51                    | equality_expression "==" relational_expression
   52                    | equality_expression "!=" relational_expression

   53 relational_expression: additive_expression
   54                      | relational_expression '<' additive_expression
   55                      | relational_expression '>' additive_expression
   56                      | relational_expression "<=" additive_expression
   57                      | relational_expression ">=" additive_expression

   58 additive_expression: multiplicative_expression
   59                    | additive_expression '+' multiplicative_expression
   60                    | additive_expression '-' multiplicative_expression

   61 multiplicative_expression: unary_expression
   62                          | multiplicative_expression '*' unary_expression
   63                          | multiplicative_expression '/' unary_expression
   64                          | multiplicative_expression '%' unary_expression

   65 unary_expression: primary_expression
   66                 | '!' unary_expression
   67                 | '+' unary_expression
   68                 | '-' unary_expression

   69 primary_expression: "identifier"
   70                   | "integer literal"
   71                   | "decimal literal"
   72                   | '(' expression ')'
   73                   | function_call


Terminais, com as regras onde eles aparecem

    $end (0) 0
    '!' (33) 66
    '%' (37) 64
    '&' (38) 49
    '(' (40) 34 41 44 72
    ')' (41) 34 41 44 72
    '*' (42) 62
    '+' (43) 59 67
    ',' (44) 3 12 36
    '-' (45) 60 68
    '/' (47) 63
    ';' (59) 1
    '<' (60) 54
    '>' (62) 55
    '[' (91) 15 16
    ']' (93) 15 16
    '|' (124) 47
    error (256)
    "type" (258)
    "variable" (259) 25 26
    "else" (260) 42
    "decimal" (261) 27
    "if" (262) 41
    "integer" (263) 28
    ":=" (264) 7 13 25 26 33 38
    "return" (265) 38
    "->" (266) 7
    "while" (267) 44
    "with" (268) 9 29
    "<=" (269) 56
    ">=" (270) 57
    "==" (271) 51
    "!=" (272) 52
    "identifier" <lexical_value> (273) 7 13 25 26 33 34 69
    "integer literal" <lexical_value> (274) 31 70
    "decimal literal" <lexical_value> (275) 32 71
    "error" (276)


Não terminais com as regras onde eles aparecem

    $accept (38)
        à esquerda: 0
    program <node> (39)
        à esquerda: 1
        à direita: 0
    list <node> (40)
        à esquerda: 2 3
        à direita: 1 3
    element <node> (41)
        à esquerda: 4 5
        à direita: 2 3
    function_definition <node> (42)
        à esquerda: 6
        à direita: 4
    header <node> (43)
        à esquerda: 7
        à direita: 6
    optional_parameter_list <node> (44)
        à esquerda: 8 9 10
        à direita: 7
    parameter_list <node> (45)
        à esquerda: 11 12
        à direita: 9 10 12
    parameter <node> (46)
        à esquerda: 13
        à direita: 11 12
    body <node> (47)
        à esquerda: 14
        à direita: 6
    command_block <node> (48)
        à esquerda: 15 16
        à direita: 14 24 41 42 44
    command_sequence <node> (49)
        à esquerda: 17 18
        à direita: 15 18
    simple_command <node> (50)
        à esquerda: 19 20 21 22 23 24
        à direita: 17 18
    variable_declaration <node> (51)
        à esquerda: 25
        à direita: 5
    variable_declaration_with_instantiation <node> (52)
        à esquerda: 26
        à direita: 19
    var_type <node> (53)
        à esquerda: 27 28
        à direita: 7 13 25 26 38
    optional_instantiation <node> (54)
        à esquerda: 29 30
        à direita: 26
    literal <node> (55)
        à esquerda: 31 32
        à direita: 29
    attribution_command <node> (56)
        à esquerda: 33
        à direita: 21
    function_call <node> (57)
        à esquerda: 34
        à direita: 20 73
    args <node> (58)
        à esquerda: 35 36 37
        à direita: 34 36
    return_command <node> (59)
        à esquerda: 38
        à direita: 22
    flow_control_command <node> (60)
        à esquerda: 39 40
        à direita: 23
    conditional_struct <node> (61)
        à esquerda: 41
        à direita: 39
    else_block <node> (62)
        à esquerda: 42 43
        à direita: 41
    iterative_struct <node> (63)
        à esquerda: 44
        à direita: 40
    expression <node> (64)
        à esquerda: 45
        à direita: 33 35 36 38 41 44 72
    logical_or_expression <node> (65)
        à esquerda: 46 47
        à direita: 45 47
    logical_and_expression <node> (66)
        à esquerda: 48 49
        à direita: 46 47 49
    equality_expression <node> (67)
        à esquerda: 50 51 52
        à direita: 48 49 51 52
    relational_expression <node> (68)
        à esquerda: 53 54 55 56 57
        à direita: 50 51 52 54 55 56 57
    additive_expression <node> (69)
        à esquerda: 58 59 60
        à direita: 53 54 55 56 57 59 60
    multiplicative_expression <node> (70)
        à esquerda: 61 62 63 64
        à direita: 58 59 60 62 63 64
    unary_expression <node> (71)
        à esquerda: 65 66 67 68
        à direita: 61 62 63 64 66 67 68
    primary_expression <node> (72)
        à esquerda: 69 70 71 72 73
        à direita: 65


Estado 0

    0 $accept: • program $end

    "variable"    deslocar, e ir ao estado 1
    "identifier"  deslocar, e ir ao estado 2

    program               ir ao estado 3
    list                  ir ao estado 4
    element               ir ao estado 5
    function_definition   ir ao estado 6
    header                ir ao estado 7
    variable_declaration  ir ao estado 8


Estado 1

   25 variable_declaration: "variable" • "identifier" ":=" var_type

    "identifier"  deslocar, e ir ao estado 9


Estado 2

    7 header: "identifier" • "->" var_type optional_parameter_list ":="

    "->"  deslocar, e ir ao estado 10


Estado 3

    0 $accept: program • $end

    $end  deslocar, e ir ao estado 11


Estado 4

    1 program: list • ';'

    ';'  deslocar, e ir ao estado 12


Estado 5

    2 list: element •
    3     | element • ',' list

    ','  deslocar, e ir ao estado 13

    $padrão  reduzir usando a regra 2 (list)


Estado 6

    4 element: function_definition •

    $padrão  reduzir usando a regra 4 (element)


Estado 7

    6 function_definition: header • body

    '['  deslocar, e ir ao estado 14

    body           ir ao estado 15
    command_block  ir ao estado 16


Estado 8

    5 element: variable_declaration •

    $padrão  reduzir usando a regra 5 (element)


Estado 9

   25 variable_declaration: "variable" "identifier" • ":=" var_type

    ":="  deslocar, e ir ao estado 17


Estado 10

    7 header: "identifier" "->" • var_type optional_parameter_list ":="

    "decimal"  deslocar, e ir ao estado 18
    "integer"  deslocar, e ir ao estado 19

    var_type  ir ao estado 20


Estado 11

    0 $accept: program $end •

    $padrão  aceitar


Estado 12

    1 program: list ';' •

    $padrão  reduzir usando a regra 1 (program)


Estado 13

    3 list: element ',' • list

    "variable"    deslocar, e ir ao estado 1
    "identifier"  deslocar, e ir ao estado 2

    list                  ir ao estado 21
    element               ir ao estado 5
    function_definition   ir ao estado 6
    header                ir ao estado 7
    variable_declaration  ir ao estado 8


Estado 14

   15 command_block: '[' • command_sequence ']'
   16              | '[' • ']'

    "variable"    deslocar, e ir ao estado 22
    "if"          deslocar, e ir ao estado 23
    "return"      deslocar, e ir ao estado 24
    "while"       deslocar, e ir ao estado 25
    "identifier"  deslocar, e ir ao estado 26
    '['           deslocar, e ir ao estado 14
    ']'           deslocar, e ir ao estado 27

    command_block                            ir ao estado 28
    command_sequence                         ir ao estado 29
    simple_command                           ir ao estado 30
    variable_declaration_with_instantiation  ir ao estado 31
    attribution_command                      ir ao estado 32
    function_call                            ir ao estado 33
    return_command                           ir ao estado 34
    flow_control_command                     ir ao estado 35
    conditional_struct                       ir ao estado 36
    iterative_struct                         ir ao estado 37


Estado 15

    6 function_definition: header body •

    $padrão  reduzir usando a regra 6 (function_definition)


Estado 16

   14 body: command_block •

    $padrão  reduzir usando a regra 14 (body)


Estado 17

   25 variable_declaration: "variable" "identifier" ":=" • var_type

    "decimal"  deslocar, e ir ao estado 18
    "integer"  deslocar, e ir ao estado 19

    var_type  ir ao estado 38


Estado 18

   27 var_type: "decimal" •

    $padrão  reduzir usando a regra 27 (var_type)


Estado 19

   28 var_type: "integer" •

    $padrão  reduzir usando a regra 28 (var_type)


Estado 20

    7 header: "identifier" "->" var_type • optional_parameter_list ":="

    "with"        deslocar, e ir ao estado 39
    "identifier"  deslocar, e ir ao estado 40

    $padrão  reduzir usando a regra 8 (optional_parameter_list)

    optional_parameter_list  ir ao estado 41
    parameter_list           ir ao estado 42
    parameter                ir ao estado 43


Estado 21

    3 list: element ',' list •

    $padrão  reduzir usando a regra 3 (list)


Estado 22

   26 variable_declaration_with_instantiation: "variable" • "identifier" ":=" var_type optional_instantiation

    "identifier"  deslocar, e ir ao estado 44


Estado 23

   41 conditional_struct: "if" • '(' expression ')' command_block else_block

    '('  deslocar, e ir ao estado 45


Estado 24

   38 return_command: "return" • expression ":=" var_type

    "identifier"       deslocar, e ir ao estado 46
    "integer literal"  deslocar, e ir ao estado 47
    "decimal literal"  deslocar, e ir ao estado 48
    '('                deslocar, e ir ao estado 49
    '+'                deslocar, e ir ao estado 50
    '-'                deslocar, e ir ao estado 51
    '!'                deslocar, e ir ao estado 52

    function_call              ir ao estado 53
    expression                 ir ao estado 54
    logical_or_expression      ir ao estado 55
    logical_and_expression     ir ao estado 56
    equality_expression        ir ao estado 57
    relational_expression      ir ao estado 58
    additive_expression        ir ao estado 59
    multiplicative_expression  ir ao estado 60
    unary_expression           ir ao estado 61
    primary_expression         ir ao estado 62


Estado 25

   44 iterative_struct: "while" • '(' expression ')' command_block

    '('  deslocar, e ir ao estado 63


Estado 26

   33 attribution_command: "identifier" • ":=" expression
   34 function_call: "identifier" • '(' args ')'

    ":="  deslocar, e ir ao estado 64
    '('   deslocar, e ir ao estado 65


Estado 27

   16 command_block: '[' ']' •

    $padrão  reduzir usando a regra 16 (command_block)


Estado 28

   24 simple_command: command_block •

    $padrão  reduzir usando a regra 24 (simple_command)


Estado 29

   15 command_block: '[' command_sequence • ']'

    ']'  deslocar, e ir ao estado 66


Estado 30

   17 command_sequence: simple_command •
   18                 | simple_command • command_sequence

    "variable"    deslocar, e ir ao estado 22
    "if"          deslocar, e ir ao estado 23
    "return"      deslocar, e ir ao estado 24
    "while"       deslocar, e ir ao estado 25
    "identifier"  deslocar, e ir ao estado 26
    '['           deslocar, e ir ao estado 14

    $padrão  reduzir usando a regra 17 (command_sequence)

    command_block                            ir ao estado 28
    command_sequence                         ir ao estado 67
    simple_command                           ir ao estado 30
    variable_declaration_with_instantiation  ir ao estado 31
    attribution_command                      ir ao estado 32
    function_call                            ir ao estado 33
    return_command                           ir ao estado 34
    flow_control_command                     ir ao estado 35
    conditional_struct                       ir ao estado 36
    iterative_struct                         ir ao estado 37


Estado 31

   19 simple_command: variable_declaration_with_instantiation •

    $padrão  reduzir usando a regra 19 (simple_command)


Estado 32

   21 simple_command: attribution_command •

    $padrão  reduzir usando a regra 21 (simple_command)


Estado 33

   20 simple_command: function_call •

    $padrão  reduzir usando a regra 20 (simple_command)


Estado 34

   22 simple_command: return_command •

    $padrão  reduzir usando a regra 22 (simple_command)


Estado 35

   23 simple_command: flow_control_command •

    $padrão  reduzir usando a regra 23 (simple_command)


Estado 36

   39 flow_control_command: conditional_struct •

    $padrão  reduzir usando a regra 39 (flow_control_command)


Estado 37

   40 flow_control_command: iterative_struct •

    $padrão  reduzir usando a regra 40 (flow_control_command)


Estado 38

   25 variable_declaration: "variable" "identifier" ":=" var_type •

    $padrão  reduzir usando a regra 25 (variable_declaration)


Estado 39

    9 optional_parameter_list: "with" • parameter_list

    "identifier"  deslocar, e ir ao estado 40

    parameter_list  ir ao estado 68
    parameter       ir ao estado 43


Estado 40

   13 parameter: "identifier" • ":=" var_type

    ":="  deslocar, e ir ao estado 69


Estado 41

    7 header: "identifier" "->" var_type optional_parameter_list • ":="

    ":="  deslocar, e ir ao estado 70


Estado 42

   10 optional_parameter_list: parameter_list •
   12 parameter_list: parameter_list • ',' parameter

    ','  deslocar, e ir ao estado 71

    $padrão  reduzir usando a regra 10 (optional_parameter_list)


Estado 43

   11 parameter_list: parameter •

    $padrão  reduzir usando a regra 11 (parameter_list)


Estado 44

   26 variable_declaration_with_instantiation: "variable" "identifier" • ":=" var_type optional_instantiation

    ":="  deslocar, e ir ao estado 72


Estado 45

   41 conditional_struct: "if" '(' • expression ')' command_block else_block

    "identifier"       deslocar, e ir ao estado 46
    "integer literal"  deslocar, e ir ao estado 47
    "decimal literal"  deslocar, e ir ao estado 48
    '('                deslocar, e ir ao estado 49
    '+'                deslocar, e ir ao estado 50
    '-'                deslocar, e ir ao estado 51
    '!'                deslocar, e ir ao estado 52

    function_call              ir ao estado 53
    expression                 ir ao estado 73
    logical_or_expression      ir ao estado 55
    logical_and_expression     ir ao estado 56
    equality_expression        ir ao estado 57
    relational_expression      ir ao estado 58
    additive_expression        ir ao estado 59
    multiplicative_expression  ir ao estado 60
    unary_expression           ir ao estado 61
    primary_expression         ir ao estado 62


Estado 46

   34 function_call: "identifier" • '(' args ')'
   69 primary_expression: "identifier" •

    '('  deslocar, e ir ao estado 65

    $padrão  reduzir usando a regra 69 (primary_expression)


Estado 47

   70 primary_expression: "integer literal" •

    $padrão  reduzir usando a regra 70 (primary_expression)


Estado 48

   71 primary_expression: "decimal literal" •

    $padrão  reduzir usando a regra 71 (primary_expression)


Estado 49

   72 primary_expression: '(' • expression ')'

    "identifier"       deslocar, e ir ao estado 46
    "integer literal"  deslocar, e ir ao estado 47
    "decimal literal"  deslocar, e ir ao estado 48
    '('                deslocar, e ir ao estado 49
    '+'                deslocar, e ir ao estado 50
    '-'                deslocar, e ir ao estado 51
    '!'                deslocar, e ir ao estado 52

    function_call              ir ao estado 53
    expression                 ir ao estado 74
    logical_or_expression      ir ao estado 55
    logical_and_expression     ir ao estado 56
    equality_expression        ir ao estado 57
    relational_expression      ir ao estado 58
    additive_expression        ir ao estado 59
    multiplicative_expression  ir ao estado 60
    unary_expression           ir ao estado 61
    primary_expression         ir ao estado 62


Estado 50

   67 unary_expression: '+' • unary_expression

    "identifier"       deslocar, e ir ao estado 46
    "integer literal"  deslocar, e ir ao estado 47
    "decimal literal"  deslocar, e ir ao estado 48
    '('                deslocar, e ir ao estado 49
    '+'                deslocar, e ir ao estado 50
    '-'                deslocar, e ir ao estado 51
    '!'                deslocar, e ir ao estado 52

    function_call       ir ao estado 53
    unary_expression    ir ao estado 75
    primary_expression  ir ao estado 62


Estado 51

   68 unary_expression: '-' • unary_expression

    "identifier"       deslocar, e ir ao estado 46
    "integer literal"  deslocar, e ir ao estado 47
    "decimal literal"  deslocar, e ir ao estado 48
    '('                deslocar, e ir ao estado 49
    '+'                deslocar, e ir ao estado 50
    '-'                deslocar, e ir ao estado 51
    '!'                deslocar, e ir ao estado 52

    function_call       ir ao estado 53
    unary_expression    ir ao estado 76
    primary_expression  ir ao estado 62


Estado 52

   66 unary_expression: '!' • unary_expression

    "identifier"       deslocar, e ir ao estado 46
    "integer literal"  deslocar, e ir ao estado 47
    "decimal literal"  deslocar, e ir ao estado 48
    '('                deslocar, e ir ao estado 49
    '+'                deslocar, e ir ao estado 50
    '-'                deslocar, e ir ao estado 51
    '!'                deslocar, e ir ao estado 52

    function_call       ir ao estado 53
    unary_expression    ir ao estado 77
    primary_expression  ir ao estado 62


Estado 53

   73 primary_expression: function_call •

    $padrão  reduzir usando a regra 73 (primary_expression)


Estado 54

   38 return_command: "return" expression • ":=" var_type

    ":="  deslocar, e ir ao estado 78


Estado 55

   45 expression: logical_or_expression •
   47 logical_or_expression: logical_or_expression • '|' logical_and_expression

    '|'  deslocar, e ir ao estado 79

    $padrão  reduzir usando a regra 45 (expression)


Estado 56

   46 logical_or_expression: logical_and_expression •
   49 logical_and_expression: logical_and_expression • '&' equality_expression

    '&'  deslocar, e ir ao estado 80

    $padrão  reduzir usando a regra 46 (logical_or_expression)


Estado 57

   48 logical_and_expression: equality_expression •
   51 equality_expression: equality_expression • "==" relational_expression
   52                    | equality_expression • "!=" relational_expression

    "=="  deslocar, e ir ao estado 81
    "!="  deslocar, e ir ao estado 82

    $padrão  reduzir usando a regra 48 (logical_and_expression)


Estado 58

   50 equality_expression: relational_expression •
   54 relational_expression: relational_expression • '<' additive_expression
   55                      | relational_expression • '>' additive_expression
   56                      | relational_expression • "<=" additive_expression
   57                      | relational_expression • ">=" additive_expression

    "<="  deslocar, e ir ao estado 83
    ">="  deslocar, e ir ao estado 84
    '<'   deslocar, e ir ao estado 85
    '>'   deslocar, e ir ao estado 86

    $padrão  reduzir usando a regra 50 (equality_expression)


Estado 59

   53 relational_expression: additive_expression •
   59 additive_expression: additive_expression • '+' multiplicative_expression
   60                    | additive_expression • '-' multiplicative_expression

    '+'  deslocar, e ir ao estado 87
    '-'  deslocar, e ir ao estado 88

    $padrão  reduzir usando a regra 53 (relational_expression)


Estado 60

   58 additive_expression: multiplicative_expression •
   62 multiplicative_expression: multiplicative_expression • '*' unary_expression
   63                          | multiplicative_expression • '/' unary_expression
   64                          | multiplicative_expression • '%' unary_expression

    '*'  deslocar, e ir ao estado 89
    '/'  deslocar, e ir ao estado 90
    '%'  deslocar, e ir ao estado 91

    $padrão  reduzir usando a regra 58 (additive_expression)


Estado 61

   61 multiplicative_expression: unary_expression •

    $padrão  reduzir usando a regra 61 (multiplicative_expression)


Estado 62

   65 unary_expression: primary_expression •

    $padrão  reduzir usando a regra 65 (unary_expression)


Estado 63

   44 iterative_struct: "while" '(' • expression ')' command_block

    "identifier"       deslocar, e ir ao estado 46
    "integer literal"  deslocar, e ir ao estado 47
    "decimal literal"  deslocar, e ir ao estado 48
    '('                deslocar, e ir ao estado 49
    '+'                deslocar, e ir ao estado 50
    '-'                deslocar, e ir ao estado 51
    '!'                deslocar, e ir ao estado 52

    function_call              ir ao estado 53
    expression                 ir ao estado 92
    logical_or_expression      ir ao estado 55
    logical_and_expression     ir ao estado 56
    equality_expression        ir ao estado 57
    relational_expression      ir ao estado 58
    additive_expression        ir ao estado 59
    multiplicative_expression  ir ao estado 60
    unary_expression           ir ao estado 61
    primary_expression         ir ao estado 62


Estado 64

   33 attribution_command: "identifier" ":=" • expression

    "identifier"       deslocar, e ir ao estado 46
    "integer literal"  deslocar, e ir ao estado 47
    "decimal literal"  deslocar, e ir ao estado 48
    '('                deslocar, e ir ao estado 49
    '+'                deslocar, e ir ao estado 50
    '-'                deslocar, e ir ao estado 51
    '!'                deslocar, e ir ao estado 52

    function_call              ir ao estado 53
    expression                 ir ao estado 93
    logical_or_expression      ir ao estado 55
    logical_and_expression     ir ao estado 56
    equality_expression        ir ao estado 57
    relational_expression      ir ao estado 58
    additive_expression        ir ao estado 59
    multiplicative_expression  ir ao estado 60
    unary_expression           ir ao estado 61
    primary_expression         ir ao estado 62


Estado 65

   34 function_call: "identifier" '(' • args ')'

    "identifier"       deslocar, e ir ao estado 46
    "integer literal"  deslocar, e ir ao estado 47
    "decimal literal"  deslocar, e ir ao estado 48
    '('                deslocar, e ir ao estado 49
    '+'                deslocar, e ir ao estado 50
    '-'                deslocar, e ir ao estado 51
    '!'                deslocar, e ir ao estado 52

    $padrão  reduzir usando a regra 37 (args)

    function_call              ir ao estado 53
    args                       ir ao estado 94
    expression                 ir ao estado 95
    logical_or_expression      ir ao estado 55
    logical_and_expression     ir ao estado 56
    equality_expression        ir ao estado 57
    relational_expression      ir ao estado 58
    additive_expression        ir ao estado 59
    multiplicative_expression  ir ao estado 60
    unary_expression           ir ao estado 61
    primary_expression         ir ao estado 62


Estado 66

   15 command_block: '[' command_sequence ']' •

    $padrão  reduzir usando a regra 15 (command_block)


Estado 67

   18 command_sequence: simple_command command_sequence •

    $padrão  reduzir usando a regra 18 (command_sequence)


Estado 68

    9 optional_parameter_list: "with" parameter_list •
   12 parameter_list: parameter_list • ',' parameter

    ','  deslocar, e ir ao estado 71

    $padrão  reduzir usando a regra 9 (optional_parameter_list)


Estado 69

   13 parameter: "identifier" ":=" • var_type

    "decimal"  deslocar, e ir ao estado 18
    "integer"  deslocar, e ir ao estado 19

    var_type  ir ao estado 96


Estado 70

    7 header: "identifier" "->" var_type optional_parameter_list ":=" •

    $padrão  reduzir usando a regra 7 (header)


Estado 71

   12 parameter_list: parameter_list ',' • parameter

    "identifier"  deslocar, e ir ao estado 40

    parameter  ir ao estado 97


Estado 72

   26 variable_declaration_with_instantiation: "variable" "identifier" ":=" • var_type optional_instantiation

    "decimal"  deslocar, e ir ao estado 18
    "integer"  deslocar, e ir ao estado 19

    var_type  ir ao estado 98


Estado 73

   41 conditional_struct: "if" '(' expression • ')' command_block else_block

    ')'  deslocar, e ir ao estado 99


Estado 74

   72 primary_expression: '(' expression • ')'

    ')'  deslocar, e ir ao estado 100


Estado 75

   67 unary_expression: '+' unary_expression •

    $padrão  reduzir usando a regra 67 (unary_expression)


Estado 76

   68 unary_expression: '-' unary_expression •

    $padrão  reduzir usando a regra 68 (unary_expression)


Estado 77

   66 unary_expression: '!' unary_expression •

    $padrão  reduzir usando a regra 66 (unary_expression)


Estado 78

   38 return_command: "return" expression ":=" • var_type

    "decimal"  deslocar, e ir ao estado 18
    "integer"  deslocar, e ir ao estado 19

    var_type  ir ao estado 101


Estado 79

   47 logical_or_expression: logical_or_expression '|' • logical_and_expression

    "identifier"       deslocar, e ir ao estado 46
    "integer literal"  deslocar, e ir ao estado 47
    "decimal literal"  deslocar, e ir ao estado 48
    '('                deslocar, e ir ao estado 49
    '+'                deslocar, e ir ao estado 50
    '-'                deslocar, e ir ao estado 51
    '!'                deslocar, e ir ao estado 52

    function_call              ir ao estado 53
    logical_and_expression     ir ao estado 102
    equality_expression        ir ao estado 57
    relational_expression      ir ao estado 58
    additive_expression        ir ao estado 59
    multiplicative_expression  ir ao estado 60
    unary_expression           ir ao estado 61
    primary_expression         ir ao estado 62


Estado 80

   49 logical_and_expression: logical_and_expression '&' • equality_expression

    "identifier"       deslocar, e ir ao estado 46
    "integer literal"  deslocar, e ir ao estado 47
    "decimal literal"  deslocar, e ir ao estado 48
    '('                deslocar, e ir ao estado 49
    '+'                deslocar, e ir ao estado 50
    '-'                deslocar, e ir ao estado 51
    '!'                deslocar, e ir ao estado 52

    function_call              ir ao estado 53
    equality_expression        ir ao estado 103
    relational_expression      ir ao estado 58
    additive_expression        ir ao estado 59
    multiplicative_expression  ir ao estado 60
    unary_expression           ir ao estado 61
    primary_expression         ir ao estado 62


Estado 81

   51 equality_expression: equality_expression "==" • relational_expression

    "identifier"       deslocar, e ir ao estado 46
    "integer literal"  deslocar, e ir ao estado 47
    "decimal literal"  deslocar, e ir ao estado 48
    '('                deslocar, e ir ao estado 49
    '+'                deslocar, e ir ao estado 50
    '-'                deslocar, e ir ao estado 51
    '!'                deslocar, e ir ao estado 52

    function_call              ir ao estado 53
    relational_expression      ir ao estado 104
    additive_expression        ir ao estado 59
    multiplicative_expression  ir ao estado 60
    unary_expression           ir ao estado 61
    primary_expression         ir ao estado 62


Estado 82

   52 equality_expression: equality_expression "!=" • relational_expression

    "identifier"       deslocar, e ir ao estado 46
    "integer literal"  deslocar, e ir ao estado 47
    "decimal literal"  deslocar, e ir ao estado 48
    '('                deslocar, e ir ao estado 49
    '+'                deslocar, e ir ao estado 50
    '-'                deslocar, e ir ao estado 51
    '!'                deslocar, e ir ao estado 52

    function_call              ir ao estado 53
    relational_expression      ir ao estado 105
    additive_expression        ir ao estado 59
    multiplicative_expression  ir ao estado 60
    unary_expression           ir ao estado 61
    primary_expression         ir ao estado 62


Estado 83

   56 relational_expression: relational_expression "<=" • additive_expression

    "identifier"       deslocar, e ir ao estado 46
    "integer literal"  deslocar, e ir ao estado 47
    "decimal literal"  deslocar, e ir ao estado 48
    '('                deslocar, e ir ao estado 49
    '+'                deslocar, e ir ao estado 50
    '-'                deslocar, e ir ao estado 51
    '!'                deslocar, e ir ao estado 52

    function_call              ir ao estado 53
    additive_expression        ir ao estado 106
    multiplicative_expression  ir ao estado 60
    unary_expression           ir ao estado 61
    primary_expression         ir ao estado 62


Estado 84

   57 relational_expression: relational_expression ">=" • additive_expression

    "identifier"       deslocar, e ir ao estado 46
    "integer literal"  deslocar, e ir ao estado 47
    "decimal literal"  deslocar, e ir ao estado 48
    '('                deslocar, e ir ao estado 49
    '+'                deslocar, e ir ao estado 50
    '-'                deslocar, e ir ao estado 51
    '!'                deslocar, e ir ao estado 52

    function_call              ir ao estado 53
    additive_expression        ir ao estado 107
    multiplicative_expression  ir ao estado 60
    unary_expression           ir ao estado 61
    primary_expression         ir ao estado 62


Estado 85

   54 relational_expression: relational_expression '<' • additive_expression

    "identifier"       deslocar, e ir ao estado 46
    "integer literal"  deslocar, e ir ao estado 47
    "decimal literal"  deslocar, e ir ao estado 48
    '('                deslocar, e ir ao estado 49
    '+'                deslocar, e ir ao estado 50
    '-'                deslocar, e ir ao estado 51
    '!'                deslocar, e ir ao estado 52

    function_call              ir ao estado 53
    additive_expression        ir ao estado 108
    multiplicative_expression  ir ao estado 60
    unary_expression           ir ao estado 61
    primary_expression         ir ao estado 62


Estado 86

   55 relational_expression: relational_expression '>' • additive_expression

    "identifier"       deslocar, e ir ao estado 46
    "integer literal"  deslocar, e ir ao estado 47
    "decimal literal"  deslocar, e ir ao estado 48
    '('                deslocar, e ir ao estado 49
    '+'                deslocar, e ir ao estado 50
    '-'                deslocar, e ir ao estado 51
    '!'                deslocar, e ir ao estado 52

    function_call              ir ao estado 53
    additive_expression        ir ao estado 109
    multiplicative_expression  ir ao estado 60
    unary_expression           ir ao estado 61
    primary_expression         ir ao estado 62


Estado 87

   59 additive_expression: additive_expression '+' • multiplicative_expression

    "identifier"       deslocar, e ir ao estado 46
    "integer literal"  deslocar, e ir ao estado 47
    "decimal literal"  deslocar, e ir ao estado 48
    '('                deslocar, e ir ao estado 49
    '+'                deslocar, e ir ao estado 50
    '-'                deslocar, e ir ao estado 51
    '!'                deslocar, e ir ao estado 52

    function_call              ir ao estado 53
    multiplicative_expression  ir ao estado 110
    unary_expression           ir ao estado 61
    primary_expression         ir ao estado 62


Estado 88

   60 additive_expression: additive_expression '-' • multiplicative_expression

    "identifier"       deslocar, e ir ao estado 46
    "integer literal"  deslocar, e ir ao estado 47
    "decimal literal"  deslocar, e ir ao estado 48
    '('                deslocar, e ir ao estado 49
    '+'                deslocar, e ir ao estado 50
    '-'                deslocar, e ir ao estado 51
    '!'                deslocar, e ir ao estado 52

    function_call              ir ao estado 53
    multiplicative_expression  ir ao estado 111
    unary_expression           ir ao estado 61
    primary_expression         ir ao estado 62


Estado 89

   62 multiplicative_expression: multiplicative_expression '*' • unary_expression

    "identifier"       deslocar, e ir ao estado 46
    "integer literal"  deslocar, e ir ao estado 47
    "decimal literal"  deslocar, e ir ao estado 48
    '('                deslocar, e ir ao estado 49
    '+'                deslocar, e ir ao estado 50
    '-'                deslocar, e ir ao estado 51
    '!'                deslocar, e ir ao estado 52

    function_call       ir ao estado 53
    unary_expression    ir ao estado 112
    primary_expression  ir ao estado 62


Estado 90

   63 multiplicative_expression: multiplicative_expression '/' • unary_expression

    "identifier"       deslocar, e ir ao estado 46
    "integer literal"  deslocar, e ir ao estado 47
    "decimal literal"  deslocar, e ir ao estado 48
    '('                deslocar, e ir ao estado 49
    '+'                deslocar, e ir ao estado 50
    '-'                deslocar, e ir ao estado 51
    '!'                deslocar, e ir ao estado 52

    function_call       ir ao estado 53
    unary_expression    ir ao estado 113
    primary_expression  ir ao estado 62


Estado 91

   64 multiplicative_expression: multiplicative_expression '%' • unary_expression

    "identifier"       deslocar, e ir ao estado 46
    "integer literal"  deslocar, e ir ao estado 47
    "decimal literal"  deslocar, e ir ao estado 48
    '('                deslocar, e ir ao estado 49
    '+'                deslocar, e ir ao estado 50
    '-'                deslocar, e ir ao estado 51
    '!'                deslocar, e ir ao estado 52

    function_call       ir ao estado 53
    unary_expression    ir ao estado 114
    primary_expression  ir ao estado 62


Estado 92

   44 iterative_struct: "while" '(' expression • ')' command_block

    ')'  deslocar, e ir ao estado 115


Estado 93

   33 attribution_command: "identifier" ":=" expression •

    $padrão  reduzir usando a regra 33 (attribution_command)


Estado 94

   34 function_call: "identifier" '(' args • ')'

    ')'  deslocar, e ir ao estado 116


Estado 95

   35 args: expression •
   36     | expression • ',' args

    ','  deslocar, e ir ao estado 117

    $padrão  reduzir usando a regra 35 (args)


Estado 96

   13 parameter: "identifier" ":=" var_type •

    $padrão  reduzir usando a regra 13 (parameter)


Estado 97

   12 parameter_list: parameter_list ',' parameter •

    $padrão  reduzir usando a regra 12 (parameter_list)


Estado 98
